Add initial flare summary sections. Additional fields and flares. (#71)